# llm_rebuilt

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  PROJECT_PLAN.md  README.md  STATUS.md  plan.json  pyproject.toml  requirements.txt  state.json
backtest/: __init__.py  engine.py  metrics.py
cli/: __init__.py
configs/: markets.yaml  risk_policies.yaml  settings.example.yaml
data_pipeline/: __init__.py  feature_store.py  transforms.py
data_pipeline/providers/: __init__.py  base.py  databento.py  ibkr_hist.py  polygon.py
data_pipeline/transforms/: __init__.py
engine/: __init__.py  state.py  strategy_engine.py  trading_types.py  types.py
engine/detectors/: __init__.py  das21.py  das22_sweep.py  mte.py  registry.py  tcea_fvg_mr.py  tcea_spmf_v3.py
engine/kernels/: __init__.py  micro_1m.py  quality.py  risk.py  structure.py  tcc_mcs.py
execution/: __init__.py  sim_broker.py
llm/: __init__.py  agents.py  gateway.py  prompts.py  schemas.py  validators.py
pse_llm/: __init__.py
pse_llm/scripts/: smoke_test.py
scripts/: bootstrap_env.sh  extract_sample_data.py  repo_audit.py
tests/: test_data_pipeline_e2e.py  test_types.py
